--- a/_units/09.md
+++ b/_units/09.md
@@ -6,7 +6,7 @@
 title: Scale and Harmony
 number: 9
 short_description: short description of the unit
-summary: brief summary of the unit
+summary: A scale is a set of pitches ordered according to various principles of historical importance. They provide the pitch material chords are built from. The theory of harmony is preoccupied with the laws governing the structure, relation, and progression of chords, much of it based on the principle of tension and release. In recent times, composers and theorists have also started to consider elements such as roughness and inharmonicity when constructing sonorities and their progressions.
 authors: 
  - Georg Hajdu
  - John MacCallum
@@ -30,14 +30,13 @@ mathjax: true
 
 # Introduction
 
-In this unit we will look at scales and harmony from the perspective of perception and cognition of music. In units 4 and 5 we have already learned about consonance and dissonance as well as pitch, intervals and key areas, resp. Harmony are beased on those principles, e.g. we expect chords to have low sensory consonance and we also are keenly aware of when chords don't seem to fit. 
+In this unit we will look at scales and harmony from the perspective of perception and cognition of music. In units 4 and 5 we have already learned about consonance and dissonance as well as pitch, intervals and key areas. Harmony is beased on those principles, e.g. we expect chords to have low sensory consonance and we also are keenly aware of when chords don't seem to fit in a passage of music. 
 
-[Webster's dictionary](http://www.m-w.com) defines harmony in reference to music as (1) the combination of simultaneous musical notes in a chord, (2) the structure of music with respect to the composition and progression of chords or (3) the the science of the structure, relation, and progression of chords. Colloquially, harmony also often denotes the pleasing or congruent arrangement of parts.
+[Webster's dictionary](http://www.m-w.com) defines harmony in reference to music as (1) _the combination of simultaneous musical notes in a chord, (2) the structure of music with respect to the composition and progression of chords or (3) the science of the structure, relation, and progression of chords._ Colloquially, harmony also denotes _the pleasing or congruent arrangement of parts_.
 
-As we can see from the above definition, the word harmony often refers to either a chord, a progression of chords, or a consonant (or generally speaking, pleasing) sonority.  The task of defining harmony is a difficult one—is it a chord or a progression of chords?  How are harmony and harmonic progression different from timbre and timbral evolution?  In this unit, we will discuss these questions and look at how composers in the 20th and 21st centuries view harmony.  We will also look at the effects that tuning systems have on harmony.
+As we can see from the above definition, the word harmony often refers to either a chord, a progression of chords, or a consonant (or generally speaking, pleasing) sonority.  The task of defining harmony is a difficult one — is it a chord or a progression of chords?  How are harmony and harmonic progression different from timbre and timbral evolution?  In this unit, we will discuss these questions and look at how composers in the 20th and 21st centuries view harmony. We will also look at the effects that tuning systems have on harmony.
 
-Scales are the collection of pitches, harmonies and melodies are formed from. They usually span the interval of an octave and repeat when going beyond it. The pitch of the individual tones within a scale depends on a variety of factors which have undergone changes throughout history as composers focussed on aspects such as pure sonorities or being able to modulate to distant key areas. It turns out that using 12 pitches per octave is the result of a compromise, but there has been an interest throughout history to consider scales with fewer or many more pitches per octave. The deviation from the standard is usually referred to as microtonality. 
-
+Scales are the collection of pitches, harmonies and melodies are formed from. They usually span the interval of an octave and repeat when going beyond it. The pitch of the individual tones within a scale depends on a variety of factors which have undergone changes throughout history as composers focussed on aspects such as pure sonorities or being able to modulate to distant key areas. It turns out that using 12 pitches per octave is the result of a compromise, but there has been an interest throughout history to consider scales with fewer or many more pitches per octave or other intervals. The deviation from the standard is usually referred to as microtonality. 
 
 # Historical View of Harmony
 
@@ -66,7 +65,7 @@ The chord can easily be explained as a half-diminished seventh chord or as a Fre
 
 # Tuning and Temperament
 
-Since the time of J.S. Bach, equal-temperament has dominated western classical music.  In this system, every semitone is of equal size in log-frequency (remember that our perception of pitch is logarithmic).  For a given number of semitones, n, we can calculate the frequency from a reference f_r using the formula
+Since the time of J.S. Bach, equal-temperament has increasingly dominated Western classical music.  In this system, every semitone is of equal size in log-frequency (remember that our perception of pitch is logarithmic).  For a given number of semitones, n, we can calculate the frequency from a reference f_r using the formula
 
 \begin{equation}
 f_n=f_r(\sqrt[12]{2})^n
@@ -145,17 +144,17 @@ A comprehensive list of tunings and temperaments (currently more than 4600 files
 
 The ultimate compromise has been achieved by introducing equal temperament - the tuning of choice in the Classical, Romantic and Modern periods. Here, the discrepancy between 12 fifts and 7 octaves (Pythagorian comma; 23.46 cents) is tempered out by dividing up the comma evenly (1.96 cents) and applying this value to all fifths: 701.96 cents - 1.96 cents = 700 cents. 
 
-By tempering out fifths, the above-mentioned tuning alternatives become enharmonically equivalent, e.g. there is no longer a distinction between a G# and Ab. Due to equal temperament, approaches such as dodecaphony (invented by Arnold Schoenberg in 1923) and total serialism were developed, which treat all tones equally and subject them to mathematical set operations.
+By tempering out fifths, the above-mentioned tuning alternatives become _enharmonically equivalent_, e.g. there is no longer a distinction between a G# and Ab. Due to equal temperament, approaches such as dodecaphony (invented by Arnold Schoenberg in 1923) and total serialism were developed, which treat all tones equally and subject them to mathematical set operations.
 
 ## Ambiguity
 
-We have already mentioned that the role of a chord depends on its context. Changing this role facilitates modulation such as when the tonic triad of C major is being reinterpreted as the subdominant of G major, C major serving as a pivot chord between those two key areas.
-Via enharmonic equivalence, equal temperament adds another dimension to modulation: there is no audible distinction between the dominant seventh chord (C-E-G-Bb; a dominant in the key of F) and the German 6th chord (C-E-G-A#, a secondary dominant in the key of E). This ambiguity of the sonority has been exploited by composers in the Classical and Romantic periods to quickly modulate to distant key areas. 
-As the dissonant Bb is resolved by downward motion (inwards) while the leading tone A# moves up (outwards),  this type of pivot chord is comparable to the ambiguous cube illusion (a type of a Necker cube) where a cube can either be perceived as projecting inwards or outwards. 
+We have already mentioned that the role of a chord depends on its context. Changing this role facilitates modulation such as when the tonic triad of C major is being reinterpreted as the subdominant of G major - C major serving as a pivot chord between those two key areas.
+Via enharmonic equivalence, equal temperament adds another dimension to modulation as there is no *audible* distinction between the dominant seventh chord (C-E-G-Bb; a dominant in the key of F) and the German 6th chord (C-E-G-A#, a secondary dominant in the key of E). This ambiguity has been exploited by composers in the Classical and Romantic periods to quickly modulate to distant key areas. 
+As the dissonant Bb is resolved by downward motion (inwards) while the leading tone A# moves up (outwards),  this type of pivoting is comparable to the ambiguous cube illusion (a type of a Necker cube) where a cube can either be perceived as projecting inwards or outwards. 
 
 {% include img-figure url="/MUTOR/assets/images/unit9-Ambiguous-Cubes-Illusion.jpg" description="Ambiguous Cubes Illusion" %}
 
-Looking at the image for an extended period of time or periodically, the perspective of the cubes will flip as the brain recognizes and realizes their ambiguity, but it can only represent one state at a time. In music, the harmonic frame of reference is given by the key area the chord is presented in, forcing one state over the other. But by dwelling on the ambiguous sonority, composers prepare the listeners for the flip and lead them to realize the other state in a context where the precise timing of the event also matters.
+Looking at the image for an extended period of time or periodically, the perspective of the cubes will flip as the brain recognizes and realizes their ambiguity, but it can only represent one state at a time. In music, the harmonic frame of reference is given by the key area the chord is presented in, forcing one state over the other. But by dwelling on the ambiguous sonority, composers prepare the listeners for the flip and lead them to realize the other state in a context where the precise timing of the events also matters.
 
 # Microtonality
 The term microtonality refers to the systematic exploration of tonal relationships that can not be derived from our tempered or quasi-tempered tuning. By comparison with the steps of the 12-tone tempered tuning (also called 12TET = "12-tone equal temperament”), in microtonal tunings deviations are smaller than 100 cents are common. Hence the term microtonality.
