--- a/_units/09.md
+++ b/_units/09.md
@@ -127,7 +127,7 @@ Download the following patches which will allow you to explore different tuning 
 
 
 # Period Tunings
-Theorists have created tunings from either deriving them from overtone series (just-intonation tuning) or stacking fifths (Pythagorean tuning). Stacking four fifths on C leads to an E which is considerably sharper (81/64; 408 cents) than the E contained in the overtone series (5/4; 386 cents). This discrepancy - mathematically represented by the ratio 81/64 * 4/5 = 81/80 = 21.5 cents - is called the Syntonic comma. Since no tuning can exist mathematically where all thirds and fifths are just, musicians have attempted to make up for this by modifying either thirds and/or fifths — an approach referred to as _temperament_. 
+Theorists have created tunings from either deriving them from the overtone series (just-intonation tuning) or stacking fifths (Pythagorean tuning). Stacking four fifths on C leads to an E which is considerably sharper (81/64; 408 cents) than the E contained in the overtone series (5/4; 386 cents). This discrepancy - mathematically represented by the ratio 81/64 * 4/5 = 81/80 = 21.5 cents - is called the Syntonic comma. Since no tuning can exist mathematically where all thirds and fifths are just, musicians have attempted to make up for this by modifying either thirds and/or fifths — an approach referred to as _temperament_. 
 
 ## Meantone Temperament
 
@@ -149,12 +149,15 @@ By tempering out fifths, the above-mentioned tuning alternatives become _enharmo
 ## Ambiguity
 
 We have already mentioned that the role of a chord depends on its context. Changing this role facilitates modulation such as when the tonic triad of C major is being reinterpreted as the subdominant of G major - C major serving as a pivot chord between those two key areas.
-Via enharmonic equivalence, equal temperament adds another dimension to modulation as there is no *audible* distinction between the dominant seventh chord (C-E-G-Bb; a dominant in the key of F) and the German 6th chord (C-E-G-A#, a secondary dominant in the key of E). This ambiguity has been exploited by composers in the Classical and Romantic periods to quickly modulate to distant key areas. 
-As the dissonant Bb is resolved by downward motion (inwards) while the leading tone A# moves up (outwards),  this type of pivoting is comparable to the ambiguous cube illusion (a type of a Necker cube) where a cube can either be perceived as projecting inwards or outwards. 
+Via enharmonic equivalence, equal temperament adds another dimension to modulation as there is no *audible* distinction between the dominant seventh chord (e.g. G-B-D-F; a dominant in the key of C) and the German 6th chord (e.g. G-B-D-E#, a secondary dominant in the key of B). This ambiguity has been exploited by composers in the Classical and Romantic periods to quickly modulate to distant key areas. In example below, Der Neugierige by Franz Schubert, Schubert exploits the harmonic ambiguity to create a musical analogy to the text by Wilhelm Müller: "One word is ‘yes’, the other is ‘no’; these two words contain for me the whole world".
+
+In the dominant seventh chord the dissonant F is resolved by downward motion (inwards) while in the German 6th chord the enharmonically equivalent leading tone E# moves up (outwards), this type of pivoting is comparable to the ambiguous cube illusion (a type of a Necker cube) where a cube can either be perceived as projecting inwards or outwards. 
+
+{% include img-figure url="/MUTOR/assets/images/unit9_Schubert-Der-Neugierige.png" description="Franz Schubert: Der Neugierige mm.35-46" %}
 
 {% include img-figure url="/MUTOR/assets/images/unit9-Ambiguous-Cubes-Illusion.jpg" description="Ambiguous Cubes Illusion" %}
 
-Looking at the image for an extended period of time or periodically, the perspective of the cubes will flip as the brain recognizes and realizes their ambiguity, but it can only represent one state at a time. In music, the harmonic frame of reference is given by the key area the chord is presented in, forcing one state over the other. But by dwelling on the ambiguous sonority, composers prepare the listeners for the flip and lead them to realize the other state in a context where the precise timing of the events also matters.
+Looking at the image for an extended period of time or periodically, the perspective of the cubes will flip as the brain recognizes and realizes their ambiguity, but it can only represent one state at a time. In music, the harmonic frame of reference is given by the key area the chord is presented in, forcing one state over the other. But by skillfully moving into the ambiguous sonority, the music prepares the listener for the flip and leads him/her to realize the other state in a context where the precise timing of the events also matters.
 
 # Microtonality
 The term microtonality refers to the systematic exploration of tonal relationships that can not be derived from our tempered or quasi-tempered tuning. By comparison with the steps of the 12-tone tempered tuning (also called 12TET = "12-tone equal temperament”), in microtonal tunings deviations are smaller than 100 cents are common. Hence the term microtonality.
