--- a/_units/09.md
+++ b/_units/09.md
@@ -149,11 +149,23 @@ By tempering out fifths, the above-mentioned tuning alternatives become _enharmo
 ## Ambiguity
 
 We have already mentioned that the role of a chord depends on its context. Changing this role facilitates modulation such as when the tonic triad of C major is being reinterpreted as the subdominant of G major - C major serving as a pivot chord between those two key areas.
-Via enharmonic equivalence, equal temperament adds another dimension to modulation as there is no *audible* distinction between the dominant seventh chord (e.g. G-B-D-F; a dominant in the key of C) and the German 6th chord (e.g. G-B-D-E#, a secondary dominant in the key of B). This ambiguity has been exploited by composers in the Classical and Romantic periods to quickly modulate to distant key areas. In example below, Der Neugierige by Franz Schubert, Schubert exploits the harmonic ambiguity to create a musical analogy to the text by Wilhelm Müller: "One word is ‘yes’, the other is ‘no’; these two words contain for me the whole world".
+Via enharmonic equivalence, equal temperament adds another dimension to modulation as there is no *audible* distinction between the dominant seventh chord (e.g. G-B-D-F; a dominant in the key of C) and the German 6th chord (e.g. G-B-D-E#, a secondary dominant in the key of B). This ambiguity has been exploited by composers in the Classical and Romantic periods to quickly modulate to distant key areas. In the example below, Der Neugierige by Franz Schubert, Schubert exploits the harmonic ambiguity to create a musical analogy to the text by Wilhelm Müller: "One word is ‘yes’, the other is ‘no’; these two words contain for me the whole world".
 
 In the dominant seventh chord the dissonant F is resolved by downward motion (inwards) while in the German 6th chord the enharmonically equivalent leading tone E# moves up (outwards), this type of pivoting is comparable to the ambiguous cube illusion (a type of a Necker cube) where a cube can either be perceived as projecting inwards or outwards. 
 
 {% include img-figure url="/MUTOR/assets/images/unit9_Schubert-Der-Neugierige.png" description="Franz Schubert: Der Neugierige mm.35-46" %}
+
+<html>
+  <head>
+    <title>The Auditory System</title>
+  </head>
+  <body>
+    <audio controls src="/MUTOR/assets/audios/unit9_Der_Neugierige.mp3">
+      Your browser does not support the audio element.
+    </audio>
+  </body>
+</html> 
+Listening example 4. The first 3'40" of Grisey's Partiels.
 
 {% include img-figure url="/MUTOR/assets/images/unit9-Ambiguous-Cubes-Illusion.jpg" description="Ambiguous Cubes Illusion" %}
 
