--- a/_units/09.md
+++ b/_units/09.md
@@ -153,7 +153,7 @@ Via enharmonic equivalence, equal temperament adds another dimension to modulati
 
 In the dominant seventh chord the dissonant F is resolved by downward motion (inwards) while in the German 6th chord the enharmonically equivalent leading tone E# moves up (outwards), this type of pivoting is comparable to the ambiguous cube illusion (a type of a Necker cube) where a cube can either be perceived as projecting inwards or outwards. 
 
-{% include img-figure url="/MUTOR/assets/images/unit9_Schubert-Der-Neugierige.png" description="Franz Schubert: Der Neugierige mm.35-46" %}
+{% include img-figure url="/MUTOR/assets/images/unit9_Schubert-Der-Neugierige.png" description="Franz Schubert: Der Neugierige mm.35-46. The first blue area features the second inversion of the secondary dominant seventh chord on G resolving to the subdominant C. The second blue area features the German 6th chord, with the F respelled as E# resolving to the cadential 6-4 chord in B major" %}
 
 <html>
   <head>
@@ -165,7 +165,6 @@ In the dominant seventh chord the dissonant F is resolved by downward motion (in
     </audio>
   </body>
 </html> 
-Listening example 4. The first 3'40" of Grisey's Partiels.
 
 {% include img-figure url="/MUTOR/assets/images/unit9-Ambiguous-Cubes-Illusion.jpg" description="Ambiguous Cubes Illusion" %}
 
