--- a/_units/09.md
+++ b/_units/09.md
@@ -151,8 +151,6 @@ By tempering out fifths, the above-mentioned tuning alternatives become _enharmo
 We have already mentioned that the role of a chord depends on its context. Changing this role facilitates modulation such as when the tonic triad of C major is being reinterpreted as the subdominant of G major - C major serving as a pivot chord between those two key areas.
 Via enharmonic equivalence, equal temperament adds another dimension to modulation as there is no *audible* distinction between the dominant seventh chord (e.g. G-B-D-F; a dominant in the key of C) and the German 6th chord (e.g. G-B-D-E#, a secondary dominant in the key of B). This ambiguity has been exploited by composers in the Classical and Romantic periods to quickly modulate to distant key areas. In the example below, Der Neugierige by Franz Schubert, Schubert exploits the harmonic ambiguity to create a musical analogy to the text by Wilhelm Müller: "One word is ‘yes’, the other is ‘no’; these two words contain for me the whole world".
 
-In the dominant seventh chord the dissonant F is resolved by downward motion (inwards) while in the German 6th chord the enharmonically equivalent leading tone E# moves up (outwards), this type of pivoting is comparable to the ambiguous cube illusion (a type of a Necker cube) where a cube can either be perceived as projecting inwards or outwards. 
-
 {% include img-figure url="/MUTOR/assets/images/unit9_Schubert-Der-Neugierige.png" description="Franz Schubert: Der Neugierige mm.35-46. The first blue area features the second inversion of the secondary dominant seventh chord on G resolving to the subdominant C. The second blue area features the German 6th chord, with the F respelled as E# resolving to the cadential 6-4 chord in B major" %}
 
 <html>
@@ -168,13 +166,14 @@ In the dominant seventh chord the dissonant F is resolved by downward motion (in
 
 {% include img-figure url="/MUTOR/assets/images/unit9-Ambiguous-Cubes-Illusion.jpg" description="Ambiguous Cubes Illusion" %}
 
+In the dominant seventh chord the dissonant F is resolved by downward motion (inwards) while in the German 6th chord the enharmonically equivalent leading tone E# moves up (outwards), this type of pivoting is comparable to the ambiguous cube illusion (a type of a Necker cube) where a cube can either be perceived as projecting inwards or outwards. 
+
 Looking at the image for an extended period of time or periodically, the perspective of the cubes will flip as the brain recognizes and realizes their ambiguity, but it can only represent one state at a time. In music, the harmonic frame of reference is given by the key area the chord is presented in, forcing one state over the other. But by skillfully moving into the ambiguous sonority, the music prepares the listener for the flip and leads him/her to realize the other state in a context where the precise timing of the events also matters.
 
 # Microtonality
 The term microtonality refers to the systematic exploration of tonal relationships that can not be derived from our tempered or quasi-tempered tuning. By comparison with the steps of the 12-tone tempered tuning (also called 12TET = "12-tone equal temperament”), in microtonal tunings deviations are smaller than 100 cents are common. Hence the term microtonality.
 
-
-In the field microtonality, we can distinguish at least two schools of thought:
+In the field of microtonality, we can distinguish at least two schools of thought:
 
 ## Just Intonation
 Representatives of this movement, which American composer Harry Partch ("Genesis of a Music") had a large impact on, focus on  intervals that can be derived from the overtone series and its inversion, the undertone series. Parth refers to this as O-Tonality and U-Tonlity. In the process, rather unusual intervals such as 11/7 or 7/3 come to the center of attention.
