--- a/_units/09.md
+++ b/_units/09.md
@@ -131,7 +131,7 @@ Theorists have created tunings from either deriving them from the overtone serie
 
 ## Meantone Temperament
 
-During the Renaissance and Baroques eras meantone temperament was wide-spread: lowering fifths to keep the thirds as just as possible. 
+During the Renaissance and Baroques periods meantone temperament was wide-spread: lowering fifths to keep the thirds as just as possible. 
 A number of variants have been in use, quarter-comma and third-comma meantone temperament among them. The term quarter-comma, for instance, emphasizes the fact in this temperament the just fifth (702 cents) is lowered by an interval corresponding to a fourth of Syntonic comma (21.5 cents / 4 = 5.375 cents): 696.6 cents. Other temperaments have been suggested by Werckmeister, Valotti and others all geared towards allowing modulcation in distant key areas while keeping thirds and fifth as pure as possible.
 
 Many of these tunings and temperaments lead to tuning alternatives for any given key. For instance, in just intonation an Ab (8/5) is different from a G# (25/16). Keyboards such as the archicembalo built in 1588 have been constructed to represent tuning alternatives. 
