--- a/_units/09.md
+++ b/_units/09.md
@@ -132,9 +132,9 @@ Theorists have created tunings from either deriving them from the overtone serie
 ## Meantone Temperament
 
 During the Renaissance and Baroques periods meantone temperament was wide-spread: lowering fifths to keep the thirds as just as possible. 
-A number of variants have been in use, quarter-comma and third-comma meantone temperament among them. The term quarter-comma, for instance, emphasizes the fact in this temperament the just fifth (702 cents) is lowered by an interval corresponding to a fourth of Syntonic comma (21.5 cents / 4 = 5.375 cents): 696.6 cents. Other temperaments have been suggested by Werckmeister, Valotti and others all geared towards allowing modulcation in distant key areas while keeping thirds and fifth as pure as possible.
+A number of variants have been in use, quarter-comma and third-comma meantone temperament among them. The term quarter-comma, for instance, emphasizes the fact in this temperament the just fifth (702 cents) is lowered by an interval corresponding to a fourth of Syntonic comma (21.5 cents / 4 = 5.375 cents): 696.6 cents. Other temperaments have been suggested by Werckmeister, Valotti and others all geared towards allowing modulation to distant key areas while keeping thirds and fifth as pure as possible.
 
-Many of these tunings and temperaments lead to tuning alternatives for any given key. For instance, in just intonation an Ab (8/5) is different from a G# (25/16). Keyboards such as the archicembalo built in 1588 have been constructed to represent tuning alternatives. 
+Many of these tunings and temperaments lead to tuning alternatives for any given key. For instance, in just intonation an Ab (8/5; going down by a just major third) is different from a G# (25/16; stacking two just major thirds). Keyboards such as the archicembalo built in 1588 have therefore been constructed to represent tuning alternatives. 
 
 {% include img-figure url="/MUTOR/assets/images/unit9-Archicembalo_en_Cents.jpg" description="The Archicembalo had a large number of tuning alternatives for the 12 keys of the chromatic scale." %}
 
@@ -142,13 +142,13 @@ A comprehensive list of tunings and temperaments (currently more than 4600 files
 
 # Equal Temperament
 
-The ultimate compromise has been achieved by introducing equal temperament - the tuning of choice in the Classical, Romantic and Modern periods. Here, the discrepancy between 12 fifts and 7 octaves (Pythagorian comma; 23.46 cents) is tempered out by dividing up the comma evenly (1.96 cents) and applying this value to all fifths: 701.96 cents - 1.96 cents = 700 cents. 
+The ultimate compromise has been achieved by introducing equal temperament - the tuning of choice in the Classical, Romantic and Modern periods. Here, the discrepancy between 12 fifts and 7 octaves (Pythagorian comma; 23.46 cents) is _tempered out_ by dividing up the comma evenly (1.96 cents) and applying this value to all fifths: 701.96 cents - 1.96 cents = 700 cents. 
 
 By tempering out fifths, the above-mentioned tuning alternatives become _enharmonically equivalent_, e.g. there is no longer a distinction between a G# and Ab. Due to equal temperament, approaches such as dodecaphony (invented by Arnold Schoenberg in 1923) and total serialism were developed, which treat all tones equally and subject them to mathematical set operations.
 
 ## Ambiguity
 
-We have already mentioned that the role of a chord depends on its context. Changing this role facilitates modulation such as when the tonic triad of C major is being reinterpreted as the subdominant of G major - C major serving as a pivot chord between those two key areas.
+We have already mentioned that the role of a chord depends on its context. Changing this role facilitates modulation such as when the tonic triad of C major is being reinterpreted as the subdominant of G major - C major serving as a _pivot_ chord between those two key areas.
 Via enharmonic equivalence, equal temperament adds another dimension to modulation as there is no *audible* distinction between the dominant seventh chord (e.g. G-B-D-F; a dominant in the key of C) and the German 6th chord (e.g. G-B-D-E#, a secondary dominant in the key of B). This ambiguity has been exploited by composers in the Classical and Romantic periods to quickly modulate to distant key areas. In the example below, Der Neugierige by Franz Schubert, Schubert exploits the harmonic ambiguity to create a musical analogy to the text by Wilhelm Müller: "One word is ‘yes’, the other is ‘no’; these two words contain for me the whole world".
 
 {% include img-figure url="/MUTOR/assets/images/unit9_Schubert-Der-Neugierige.png" description="Franz Schubert: Der Neugierige mm.35-46. The first blue area features the second inversion of the secondary dominant seventh chord on G resolving to the subdominant C. The second blue area features the German 6th chord, with the F respelled as E# resolving to the cadential 6-4 chord in B major" %}
