--- a/_units/09.md
+++ b/_units/09.md
@@ -166,17 +166,17 @@ Via enharmonic equivalence, equal temperament adds another dimension to modulati
 
 {% include img-figure url="/MUTOR/assets/images/unit9-Ambiguous-Cubes-Illusion.jpg" description="Ambiguous Cubes Illusion" %}
 
-In the dominant seventh chord the dissonant F is resolved by downward motion (inwards) while in the German 6th chord the enharmonically equivalent leading tone E# moves up (outwards), this type of pivoting is comparable to the ambiguous cube illusion (a type of a Necker cube) where a cube can either be perceived as projecting inwards or outwards. 
+In the dominant seventh chord the dissonant F is resolved by downward motion (inwards) while in the German 6th chord the enharmonically equivalent leading tone E# moves up (outwards). This type of pivoting is comparable to the ambiguous cube illusion (featuring a type of a Necker cube) where a cube can either be perceived as projecting inwards or outwards. 
 
-Looking at the image for an extended period of time or periodically, the perspective of the cubes will flip as the brain recognizes and realizes their ambiguity, but it can only represent one state at a time. In music, the harmonic frame of reference is given by the key area the chord is presented in, forcing one state over the other. But by skillfully moving into the ambiguous sonority, the music prepares the listener for the flip and leads him/her to realize the other state in a context where the precise timing of the events also matters.
+Looking at the image for an extended period of time or periodically, the perspective of the cubes flips as the brain recognizes and realizes their ambiguity, but it can only represent one state at a time. In music, the harmonic frame of reference is given by the key area the chord is presented in, forcing one state over the other. But by skillfully moving into the ambiguous sonority, the music prepares the listener for the flip and leads him/her to realize the other state in a context where the precise timing of the events also matters.
 
 # Microtonality
-The term microtonality refers to the systematic exploration of tonal relationships that can not be derived from our tempered or quasi-tempered tuning. By comparison with the steps of the 12-tone tempered tuning (also called 12TET = "12-tone equal temperament”), in microtonal tunings deviations are smaller than 100 cents are common. Hence the term microtonality.
+The term microtonality refers to the systematic exploration of tonal relationships that can not be derived from our tempered or quasi-tempered tuning. By comparison with the steps of the 12-tone tempered tuning (also called 12TET = "12-tone equal temperament”), in microtonal tunings deviations smaller than 100 cents are common. Hence the term microtonality.
 
-In the field of microtonality, we can distinguish at least two schools of thought:
+Amongst the practitioners of microtonality, we can distinguish at least two main schools of thought:
 
 ## Just Intonation
-Representatives of this movement, which American composer Harry Partch ("Genesis of a Music") had a large impact on, focus on  intervals that can be derived from the overtone series and its inversion, the undertone series. Parth refers to this as O-Tonality and U-Tonlity. In the process, rather unusual intervals such as 11/7 or 7/3 come to the center of attention.
+Representatives of this movement, which American composer Harry Partch ("Genesis of a Music") had a large impact on, focus on intervals that can be derived from the overtone series and its inversion, the undertone series. Parth refers to this as O-Tonality and U-Tonlity. In the process, rather unusual intervals such as 11/7 or 7/3 come to the foreground.
 
 {% include img-figure url="/MUTOR/assets/images/unit9_Partch-Diamond.png" description="Partch Diamond" %}
 {% include note author="vg" text="What is n-limit JI? Mention JI Notation" %}
@@ -185,10 +185,10 @@ Figure 3. Arrangement of the bars in Harry Partch's Diamond Marimba in 11-limit 
 
 ## Equal Divisions 
 ### Divisions of the Whole Tone
-The need for small subdivisions of the whole tone into four (quartertone tuning or 24-tone equal temperament [24TET] also known as equal devision of the octave in 24 steps [24EDO]) and six (36TET) was already theorized and practiced at the beginning of the 20th Century by composers such as Busoni, Haba, Wishnegradsky and Ives. The Mexican composer Julian Carrillo had a piano patented in 1940 with a keyboard in 16th notes (96TET)spanning just one octave. The 72-step "ekmelic" tuning closely approximates most of the lower harmonic overtones, 
+Subdivisions of the whole tone into four (quartertone tuning or 24-tone equal temperament [24TET] also known as equal devision of the octave in 24 steps [24EDO]), five (30TET) and six (36TET) were already theorized and practiced at the beginning of the 20th Century by composers such as Busoni, Hába, Wyschnegradsky and Ives. The 72-step "ekmelic" tuning - used in Byzantine music theory - closely approximates most of the lower harmonic overtones was popular amongst a number of 20th century composers, while Mexican composer Julian Carrillo had a piano patented in 1940 with a keyboard in 16th notes (96TET) spanning just one octave. 
 
 ### Other Divisions of the Octave
-53TET is derived from stacking fifths and tempering out the small _schisma_ between 53 fifths and 31st octave. It was known to Chinese scholars in antiquity. 
+53TET is derived from stacking fifths and tempering out the small _schisma_ b etween 53 fifths and 31st octave. It was known to Chinese scholars in antiquity. 
 
 {% include img-figure url="/MUTOR/assets/images/unit9_53TET-in-Max.png" description="Calculation of 53TET" %}
 Figure 4. Calculation of the 53-step equidistant tuning in Max
