--- a/_units/09.md
+++ b/_units/09.md
@@ -6,7 +6,7 @@
 title: Scale and Harmony
 number: 9
 short_description: short description of the unit
-summary: A scale is a set of pitches ordered according to various principles of historical importance. They provide the pitch material chords are built from. The theory of harmony is preoccupied with the laws governing the structure, relation, and progression of chords, much of it based on the principle of tension and release. In recent times, composers and theorists have also started to consider elements such as roughness and inharmonicity when constructing sonorities and their progressions.
+summary: A scale is a set of ascending or descending pitches ordered according to cognitive, theoretical and/or historical principles. They provide the pitch material from which harmonies are built. The theory of harmony is preoccupied with the laws governing the structure, relation, and progression of chords, much of it based on the principle of tension and release. In recent times, composers and theorists have also started to consider elements such as roughness and inharmonicity when constructing sonorities and their progressions.
 authors: 
  - Georg Hajdu
  - John MacCallum
@@ -237,7 +237,26 @@ Another classes of tunings can not be classified into one group or the other. Th
 {% include img-figure url="/MUTOR/assets/images/unit9_Gamelan-Orchestra.png" description="A Gamelan orchestra" %}
 
 # Tuning, Timbre, Spectrum, Scale
-{% include note author="vg" text="more..." %}
+In 1998, the American music theorist and professor of electrical engineering Richard Sethares wrote a book titled Tuning, Timbre, Spectrum, Scale in which he focussed on the interdependence of consonance/dissonance and timbre. A strinking example for this is how the structure of a scale depends on the spectral content of the sonorities employed. If the sounds feature a stretched spectrum obtained by this formula (S being the stretch factor; 2 for harmonic series)
+
+\begin{equation}
+f_n(stretched) = f_0 S^(\frac{n}{log(2)}) 
+\end{equation}
+
+a candence played with those sounds also asks for the scale to be stretched by the same amount. Otherwise, the chords and their progression sound out of tune. This is due to the lining up of the partials when playing sound simultaneously and sequentially. 
+
+There are four scenarios to be considered:
+1. Neither the spectra nor the scales are stretched: all sounds in tune
+1. The spectra are stretched: the chords will sound dissonant
+1. The scale is stretched: the chord progression sounds out of tune
+1. Both spectra and scale are stretched: the chords and their progression sound convincing. 
+
+Note that depending on the stretch factor, chords may still sound strange and wanting. This is explained by the fact that, due to the brain's ability to infer a virtual fundamental (f<sub>0</sub>), partials forming a harmonic spectrum (and - to lesser degree - tones forming a chord) will cause the sensation of a fundamental even though it may be absent from the spectrum. With stretched spectra, this virtual fundamental may not form a harmonic relationship with the members of chord, adding to its inharmonicity.
+
+{% include note author="vg" text="We may need a JavaSxcript app here" %}
+
+# Harmony and Timing
+In Western tonal music, chord progressions follow certain _syntactic_ rules particularly in cadences and sequences. Thereby, the meaning of a chord depends on its position on a weak or strong beat. Consider the sonority G-C-E-G commonly referred to as a **second inversion 6-4 chord**. If positioned on the downbeat of measure, it is perceived as **cadential 6-4 chord**, first resolving to the dominant and then finally to the tonic. If positioned on a weak beat between a subdominant and its first inversion it is to be labeled as a **passing 6-4 chord** with no need to resolve any of its pitches.  
 
 # Harmony in the 20th/21st Centuries
 
